Fix visual issue in opened 'More Filters' dropdown on mobile

--- a/src/components/FilterItem/FilterItem.module.scss
+++ b/src/components/FilterItem/FilterItem.module.scss
@@ -72,6 +72,12 @@
             width: 100%;
         }
 
+        .filterItem {
+            &.selected:after {
+                display: none;
+            }
+        }
+
         .filterItemButton {
             border: none;
             font-size: 18px;
